--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.3.1",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
     "react": "^19.0.0",
