--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "goopss-coming-soon",
+  "name": "goopss-new",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^11.3.1",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
     "react": "^19.0.0",
