--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
